<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerFragment"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="770dp"
        android:layout_height="204dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.858">

        <Button
            android:id="@+id/btnstop"
            android:layout_width="188dp"
            android:layout_height="86dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/stop"
            android:textSize="35sp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnstart"
            android:layout_width="211dp"
            android:layout_height="97dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/start"
            android:textSize="35sp" />

        <Button
            android:id="@+id/btnresume"
            android:layout_width="310dp"
            android:layout_height="115dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:text="@string/resume"
            android:textSize="35sp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnPause"
            android:layout_width="200dp"
            android:layout_height="101dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/pause"
            android:textSize="35sp"
            android:visibility="gone"/>

    </LinearLayout>

    <TextView
        android:id="@+id/pomodoroTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:gravity="center"
        android:textAlignment="center"
        android:text="00:00:00"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/task"
            android:textSize="25dp"/>

        <Button
            android:id="@+id/btnPomodorro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Pomodoro"
            android:textSize="25dp"
            android:backgroundTint="@color/black"/>
    </LinearLayout>




    <EditText
        android:id="@+id/timePomodoro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="25"
        android:gravity="center"
        android:textColor="@color/white"
        android:ems="3"
        android:textSize="35sp"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pomodoroTimer" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="38dp"
        android:textColor="@color/white"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/timePomodoro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pomodoroTimer" />


</androidx.constraintlayout.widget.ConstraintLayout>